Stop stretching of images

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ html {
 }
 img {
     display: inline;
-    width: 200px;
     height: 100px;
 }
 #footer {
@@ -85,5 +84,4 @@ body {
     text-shadow: 2px 2px 4px #000000;
 }
 .stop-stretch {
-    height: 50px;
-}
+    
